[workspace]

[package]
name = "spl-token"
version = "7.0.0"
description = "Solana Program Library Token"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.9"
bincode = "1.3.3"
bytemuck = "1.20.0"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.3"
serde = "1.0.215"
solana-nostd-entrypoint = "0.6.0"
solana-program = "^1.18"
thiserror = "2.0"

[dev-dependencies]
lazy_static = "1.5.0"
proptest = "1.5"
serial_test = "3.2.0"
solana-program-test = "^1.18"
solana-sdk = "^1.18"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
